--- a/hoja de vida/index.html
+++ b/hoja de vida/index.html
@@ -22,7 +22,7 @@
       </ul>
     </nav>
     <div class="hero">
-      <h1 class="hero__title">Scribbler</h1>
+      <h1 class="hero__title">Emerson Duvan Mosquera Ortega</h1>
       <p class="hero__description">Take your markdown notes in terminal</p>
     </div>
     <div class="hero__terminal">
