Actualizo hoja de vida: hero con espaciado, nueva imagen de perfil y CSS corregido

--- a/trabajos2026-main/hoja de vida/index.html
+++ b/trabajos2026-main/hoja de vida/index.html
@@ -8,26 +8,22 @@
 </head>
 <body>
 
-    <!-- HERO PRINCIPAL -->
-    <section class="profile-hero index-hero">
+    <header class="top-bar">
+       
+    </header>
+
+    <section class="profile-hero">
         <div class="profile-container">
             <div class="profile-image-circle">
-                <img src="fotodeperfil.webp" alt="Foto Emerson Mosquera">
+                <img src="css/imagenes/fotodeperfil.webp" alt="Foto Emerson Mosquera">
             </div>
-
             <h1 class="profile-name">Emerson Duvan Mosquera Ortega</h1>
             <p class="profile-title">Desarrollador de Software</p>
-            <p class="profile-subtitle">
-                Desarrollo Web | Java | C++ | Python
-            </p>
+            <p class="profile-subtitle">Desarrollo Web | Java | C++ | Python</p>
 
-            <br>
-            <a href="html/hojadevida.html" class="btn">
-                Ver Hoja de Vida
-            </a>
+            <a href="html/hojadevida.html" class="btn">Ver Hoja de Vida</a>
         </div>
     </section>
 
 </body>
 </html>
-
